--- a/AigisChecker/html/Primary.css
+++ b/AigisChecker/html/Primary.css
@@ -49,12 +49,14 @@
     padding: 10px 5px 5px 5px;
 }
 
-.iconbox hr {
-    margin-left: 10px;
-    margin-right: 10px;
-    border: solid;
-    border-radius: 4px;
-    border-color: #a0c0ff;
+.iconbox .hr {
+    font-size: 120%;
+    font-weight: bold;
+    margin: 6px 10px 6px 10px;
+    border-radius: 2px;
+    padding: 1px 0px 1px 7px;
+    background: #a0c0ff;
+    color: #333;
 }
 
 .iconbox .icon {
