fix github-elementID bug

--- a/AigisChecker/html/Primary.css
+++ b/AigisChecker/html/Primary.css
@@ -76,7 +76,7 @@
     color: #3878ec;
 }
 
-.sidebox #sharebox {
+.sidebox #_sharebox {
     width: 270px;
     height: 120px;
     max-width: 270px;
