--- a/html/style/Primary.css
+++ b/html/style/Primary.css
@@ -178,7 +178,7 @@ body {
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 
 @media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {
+    .row>.leftcolumn, .row>.rightcolumn {
         width: 100%;
         padding: 0px;
     }
