--- a/html/style/AigisTactics.css
+++ b/html/style/AigisTactics.css
@@ -4,6 +4,7 @@
     background-color: rgba(255, 255, 255, 0.0);
     /* background-color: rgba(255, 255, 255, 0.8); */
     background-blend-mode: lighten;
+    background-size: cover;
     width: 960px;
     height: 640px;
     position: relative;
