--- a/html/style/AigisEXP.css
+++ b/html/style/AigisEXP.css
@@ -13,6 +13,11 @@
     width: 55%;
     height: 100%;
     float: left;
+    padding-right: 7px;
+}
+
+.training .box1 .boxnote {
+    float: right;
 }
 
 .training .box2 {
@@ -27,7 +32,8 @@
     float: left;
 }
 
-.training input[type="number"] {
+.training .box2 input[type="number"],
+.training .box3 input[type="number"] {
     width: 52px;
 }
 
@@ -66,15 +72,44 @@ input[type="checkbox"].on-off+.accContent .box {
     overflow: hidden;
 }
 
-input[type="checkbox"].on-off+.accContent .keep, input[type="checkbox"].on-off:checked+.accContent .show, input[type="checkbox"].on-off:checked+.accContent .showh43 {
+input[type="checkbox"].on-off+.accContent .keep,
+input[type="checkbox"].on-off:checked+.accContent .show,
+input[type="checkbox"].on-off:checked+.accContent .showh1,
+input[type="checkbox"].on-off:checked+.accContent .showh2,
+input[type="checkbox"].on-off:checked+.accContent .showh3 {
     height: 26px;
     margin-bottom: 5px;
 }
 
-input[type="checkbox"].on-off+.accContent .showh43:hover {
+input[type="checkbox"].on-off+.accContent .showh1:hover {
     height: 43px;
-    margin-bottom: 5px;
 }
+
+input[type="checkbox"].on-off+.accContent .showh2:hover {
+    height: 65px;
+}
+
+input[type="checkbox"].on-off+.accContent .showh3:hover {
+    height: 87px;
+}
+
+.training .rare {
+    width: 35px;
+}
+
+.training .sec {
+    width: 35px;
+}
+
+.training .lv {
+    width: 40px;
+}
+
+.training .cc {
+    width: 35px;
+}
+
+/* ; float: right; */
 
 /* set card level box */
 
@@ -140,7 +175,8 @@ input[type="button"] {
     cursor: pointer;
 }
 
-input[type="number"]:not(.plane5)::-webkit-outer-spin-button, input[type="number"]:not(.plane5)::-webkit-inner-spin-button {
+input[type="number"]:not(.plane5)::-webkit-outer-spin-button,
+input[type="number"]:not(.plane5)::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
@@ -171,7 +207,8 @@ input[type="number"]:not(.plane5)::-webkit-outer-spin-button, input[type="number
 }
 
 @media screen and (max-width: 940px) {
-    .row>.leftcolumn, .row>.rightcolumn {
+    .row>.leftcolumn,
+    .row>.rightcolumn {
         width: 680px;
         float: left;
         padding: 0px;
