--- a/html/style/Primary.css
+++ b/html/style/Primary.css
@@ -154,6 +154,28 @@ body {
     border: 3px #ffffff00 solid;
 }
 
+/* data save */
+
+.datasave .button label {
+    cursor: pointer;
+}
+
+.datasave .button {
+    cursor: pointer;
+    height: 26px;
+    color: #fff;
+    background-color: #3898ec;
+    border: 2px #3898ec solid;
+    border-radius: 7px;
+    margin: 1px 0px 1px 0px;
+    padding: 1px 6px 1px 6px;
+}
+
+.datasave .button:hover {
+    color: #3898ec;
+    background-color: #fff;
+}
+
 /* Clear floats after the columns */
 
 .row:after {
