--- a/html/style/Primary.css
+++ b/html/style/Primary.css
@@ -144,8 +144,14 @@ body {
     animation-direction: alternate;
     animation-timing-function: ease-in-out;
 }
+
+#iconbox .mask {
+    border-color: red;
+    border-style: dotted;
+}
+
 @keyframes mask {
-      0% { opacity: 0.7; }
+      0% { opacity: 0.8; }
     100% { opacity: 0.5; }
 }
 
